# FM4T

./: .gitignore  README.md  main.py  pyproject.toml  sample_condition_denoise.py  sample_condition_super_res_2x.py  sample_condn_recon.py
FM_CT_git/: environment.yaml  sample_condition_CT_recons.py  sample_condition_MW.py  sample_condition_Spr_Rec.py  sample_condition_denoise.py  sample_condition_sino_512_v5_MW.py  sample_condition_sino_MW.py  sample_condition_sino_Spr_Rec.py  sample_condition_sino_denoise.py  sample_condition_sino_super_res.py  sample_condition_super_res_2x.py  sample_condn_recon.py
FM_CT_git/data/: dataloader.py
configs/latent-diffusion/: config_rl_no_mask.yaml  ffhq-ldm-vq-4m.yaml
configs/tasks/: CT_recon_config.yaml  denoising_config_512.yaml  denoising_config_512_gauss_p1.yaml  denoising_config_512_gauss_p2.yaml  inpainting_MW_config_512.yaml  inpainting_Spr_Rec_config_512.yaml  inpainting_sinogram.yaml  super_resolution_config_512_2x.yaml  super_resolution_config_512_4x.yaml
deployment/: 00_apptainer_interactive_session.sh  01_apptainer_env_setup.sh  02_apptainer_build_fm4t.sh  03_apptainer_fm4t_test_recon.sh  apptainer_fm4t.def  apptainer_gpu_test.sh  apptainer_recon_test.sh  apptainer_shell.sh  parallel_recon.sh  python_env_create_activate.sh  setup_mps.sh
latent-diffusion-inpainting_sino/: ReadMe  inference_latent_diffusion_model.py  main.py  main_20k_MW.py  main_20k_Spr_Rec.py
latent-diffusion-inpainting_sino/inference_AE_only/: README.txt  (+4 more)
ldm_inverse/: condition_methods.py  measurements.py
scripts/: utils.py  utils_March10.py
(+180 files in other folders)
